--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,12 +1,18 @@
 @media screen and (max-width: 970px) {
   header {
-    padding: 0;
-  }
-    .name {
-      font-size: 2.5rem !important;
-    }
+    padding: 1rem;
   }
 
+  .header-content {
+    grid-template-columns: 1fr;
+    padding-bottom: 1.5rem;
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  .name {
+    font-size: 2.5rem;
+  }
 
   .about-container {
     grid-template-columns: 1fr;
