Updated about image

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -47,10 +47,10 @@
     margin-top: 3rem;
   }
 
-  .blogs-content {
-    grid-template-columns: 1fr;
-    padding-bottom: 6rem;
-  }
+  // .blogs-content {
+  //   grid-template-columns: 1fr;
+  //   padding-bottom: 6rem;
+  // }
 
   .contact-content-container {
     flex-direction: column;
