--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -72,10 +72,10 @@ section {
   display: none;
   transform: translateY(0) scale(1);
 }
-.sec4 {
-  display: none;
-  transform: translateY(0) scale(1);
-}
+// .sec4 {
+//   display: none;
+//   transform: translateY(0) scale(1);
+// }
 .sec5 {
   display: none;
   transform: translateY(0) scale(1);
@@ -451,59 +451,59 @@ section {
 }
 
 // Blog Section
-.blogs-content {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin-top: 3rem;
-  gap: 2rem;
-}
-.blog {
-  position: relative;
-  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
-  transition: var(--transition);
-  &:hover {
-    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
-    transform: translateY(-5px);
-    transition: var(--transition);
-    img {
-      width: 100%;
-      height: 350px;
-      object-fit: cover;
-      filter: grayscale(0);
-      transform: scale(1.05);
-      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
-    }
-  }
-  img {
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    filter: grayscale(100);
-    transition: var(--transition);
-  }
-  .blog-text {
-    margin-top: -7px;
-    padding: 1.1rem;
-    border-top: 8px solid var(--color-secondary);
-    background-color: var(--color-grey-5);
-    h4 {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-      transition: var(--transition);
-      cursor: pointer;
-      &:hover {
-        color: var(--color-secondary);
-      }
-    }
-    p {
-      color: var(--color-grey-2);
-      line-height: 1.3rem;
-      padding-bottom: 1rem;
-    }
-  }
-}
+// .blogs-content {
+//   display: grid;
+//   grid-template-columns: repeat(3, 1fr);
+//   margin-top: 3rem;
+//   gap: 2rem;
+// }
+// .blog {
+//   position: relative;
+//   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
+//   transition: var(--transition);
+//   &:hover {
+//     box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
+//     transform: translateY(-5px);
+//     transition: var(--transition);
+//     img {
+//       width: 100%;
+//       height: 350px;
+//       object-fit: cover;
+//       filter: grayscale(0);
+//       transform: scale(1.05);
+//       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
+//     }
+//   }
+//   img {
+//     width: 100%;
+//     height: 350px;
+//     object-fit: cover;
+//     border-top-left-radius: 5px;
+//     border-top-right-radius: 5px;
+//     filter: grayscale(100);
+//     transition: var(--transition);
+//   }
+//   .blog-text {
+//     margin-top: -7px;
+//     padding: 1.1rem;
+//     border-top: 8px solid var(--color-secondary);
+//     background-color: var(--color-grey-5);
+//     h4 {
+//       font-size: 2rem;
+//       margin-bottom: 0.5rem;
+//       transition: var(--transition);
+//       cursor: pointer;
+//       &:hover {
+//         color: var(--color-secondary);
+//       }
+//     }
+//     p {
+//       color: var(--color-grey-2);
+//       line-height: 1.3rem;
+//       padding-bottom: 1rem;
+//     }
+//   }
+// }
 
 // Contact Section
 .contact-content-container {
