--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,7 +9,7 @@
 
 :root {
   --color-primary: #081a28;
-  --color-secondary: #6670ad;
+  --color-secondary: #bb9af7;
   --color-white: #fff;
   --color-black: #000;
   --color-grey0: #f8f8f8f8;
@@ -161,6 +161,7 @@ section {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
+  height: 70%;
 }
 .about-container .right-about .about-item {
   border: 1px solid var(--color-grey-5);
